src/test/deca/syntax/invalid/double_bool.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    boolean boolean x;
}